--- a/templates/0.7/partials/left-nav.md.hbs
+++ b/templates/0.7/partials/left-nav.md.hbs
@@ -2,7 +2,7 @@
 	<h1>Introduction</h1>
 	<ul>
 		<li>{{{createLink 'Get started'}}}</li>
-		<li>{{{createLink 'Tips'}}}</li>
+		<li>{{{createLink 'Known issues, FAQs, and Tips'}}}</li>
 		<li>{{{createLink 'Get support'}}}</li>
 		<li>{{{createLink 'Contributing'}}}</li>
 		<li>{{{createLink 'Get started with node.js'}}}</li>
