--- a/templates/edge/partials/left-nav.md.hbs
+++ b/templates/edge/partials/left-nav.md.hbs
@@ -2,12 +2,12 @@
 	<h1>Introduction</h1>
 	<ul>
 		<li>{{{createLink 'Get started'}}}</li>
-		<li>{{{createLink 'Tips'}}}</li>
+		<li>{{{createLink 'Overview'}}}</li>
+		<li>{{{createLink 'Known issues, FAQs, and Tips'}}}</li>
 		<li>{{{createLink 'Get support'}}}</li>
 		<li>{{{createLink 'Contributing'}}}</li>
 		<li>{{{createLink 'Get started with node.js'}}}</li>
 		<li>{{{createLink 'Migrating' 'Migrating from previous versions'}}}</li>
-		<li>{{{createLink 'CSP'}}}</li>
 	</ul>
 </section>
 
@@ -83,6 +83,7 @@
 		<li>{{{createLink 'ractive.fire()'}}}</li>
 		<li>{{{createLink 'ractive.get()'}}}</li>
 		<li>{{{createLink 'ractive.insert()'}}}</li>
+		<li>{{{createLink 'ractive.link()'}}}</li>
 		<li>{{{createLink 'ractive.merge()'}}}</li>
 		<li>{{{createLink 'ractive.observe()'}}}</li>
 		<li>{{{createLink 'ractive.observeOnce()'}}}</li>
@@ -101,6 +102,7 @@
 		<li>{{{createLink 'ractive.teardown()'}}}</li>
 		<li>{{{createLink 'ractive.toggle()'}}}</li>
 		<li>{{{createLink 'ractive.toHTML()'}}}</li>
+		<li>{{{createLink 'ractive.unlink()'}}}</li>
 		<li>{{{createLink 'ractive.unrender()'}}}</li>
 		<li>{{{createLink 'ractive.unshift()'}}}</li>
 		<li>{{{createLink 'ractive.update()'}}}</li>
