--- a/docs/0.7/Known issues, FAQs, and Tips.md.hbs
+++ b/docs/0.7/Known issues, FAQs, and Tips.md.hbs
@@ -1,8 +1,22 @@
 ---
-title: Tips
+title: Known issues, FAQs, and Tips
 ---
-Using Ractive with...
----------------------
+
+## Known Issues
+
+### Memory and crashing issues with Safari on iOS 9
+
+It seems that Apple has introduced some memory management _feature_ with Safari in iOS 9 that causes large templates to crash Safari during parsing. Fortunately, this can be worked around by splitting your templates into smaller partials or, more efficiently, by pre-parsing your templates and serving them as a JS object. You can use {{{createLink 'Ractive.parse()'}}} to create the JS object as a build step or when the page is being served.
+
+Since there isn't _really_ any browser for iOS other than Safari, all browser on iOS 9 are affected by this issue. iOS 8 seems to remain unaffected.
+
+## FAQs
+
+__Coming Soon!™__
+
+## Tips
+
+### Using Ractive with...
 
 * {{{createLink 'using-ractive-with-backbone' '...Backbone'}}}
 * {{{createLink 'using-ractive-with-requirejs' '...RequireJS'}}}
@@ -12,8 +26,7 @@ Using Ractive with...
 * {{{createLink 'using-ractive-with-jquery-mobile' '...jQuery Mobile'}}}
 <!-- TODO * [...Underscore (and other utility libraries)](using-ractive-with-underscore) -->
 
-Building an app with Ractive
-----------------------------
+### Building an app with Ractive
 
 Ractive can take care of your UI, and for simple applications it can take care of your *application state* as well. But if you're building a complex app you'll likely have other things to worry about as well - routing and history management, fetching and saving data to and from a server, validating data, handling realtime communication, user authentication, and all the other fun stuff that goes into a web app.
 
