--- a/docs/edge/Known issues, FAQs, and Tips.md.hbs
+++ b/docs/edge/Known issues, FAQs, and Tips.md.hbs
@@ -8,11 +8,11 @@ title: Known issues, FAQs, and Tips
 
 It seems that Apple has introduced some memory management _feature_ with Safari in iOS 9 that causes large templates to crash Safari during parsing. Fortunately, this can be worked around by splitting your templates into smaller partials or, more efficiently, by pre-parsing your templates and serving them as a JS object. You can use {{{createLink 'Ractive.parse()'}}} to create the JS object as a build step or when the page is being served.
 
-iOS 8 seems to remain unaffected.
+Since there isn't _really_ any browser for iOS other than Safari, all browser on iOS 9 are affected by this issue. iOS 8 seems to remain unaffected.
 
 ## FAQs
 
-__Coming Soon!&tmp;__
+__Coming Soon!™__
 
 ## Tips
 
