--- a/docs/edge/References.md.hbs
+++ b/docs/edge/References.md.hbs
@@ -7,14 +7,15 @@ By themselves, references are useless - they must *resolve* to a *{{{createLink 
 
 The resolution algorithm looks like this:
 
-1. If the context stack is empty, skip to (6).
-2. Find the innermost context on the current context stack.
-3. See if the keypath which is `context + '.' + reference` points to a value
-4. If so, resolve with that keypath
-5. Otherwise, remove the innermost context from the stack. Repeat (1-5).
-6. See if `reference` is a valid keypath by itself. If so, resolve.
-7. If we couldn't resolve the reference, add it to the 'pending resolution' pile. Each time the data changes, repeat steps (1-7).
-
+1. Is the reference a special ref? If so, resolve with the appropriate special keypath.
+2. If the reference is explicit or matches a path in the current context exactly, resolve with that keypath.
+3. Grab the current virtual node from the template hierarchy.
+4. If there are any aliases, index, or key mapping defined that match, resolve with that keypath.
+5. If this is a component and there are any matching mappings, resolve with that keypath.
+6. If this node has context and there is a matching path, resolve with that keypath.
+7. Otherwise, remove the innermost context from the stack. Repeat (3-7).
+8. See if `reference` is a valid keypath by itself. If so, resolve with that keypath.
+9. If the reference is still unresolved, add it to the 'pending resolution' pile. Each time potentially matching keypaths are updated, resolution will be attempted for the unresolved reference.
 
 ## Huh?
 
@@ -179,3 +180,20 @@ The above example could also use a root reference:
 </ul>
 ```
 
+## Special references
+
+There are a few things that can be useful to reference from the template that don't really exist in your data. For instance, the current iteration index of a repeated section. These special references can be used just like any other data reference, excepting two-way binding. Here's the list of specials and their resolutions:
+
+1. `@index` - the current iteration index of the containing repeated section e.g. `\{{#each list}}\{{@index}}\{{/each}}`
+2. `@key` - the current key name of the containing object iteration section e.g. `\{{#each someObj}}\{{@key}}\{{/each}}`
+3. `@keypath` - the keypath to the current context e.g. `foo.bar.baz` in `\{{#foo}}\{{#with bar.baz}}\{{@keypath}}\{{/with}}\{{/}}`. If the current context happens to be a mapping in a component, the keypath will be adjusted relative to the mapping.
+3. `@rootpath` - the same as keypath, except not adjusted for component mappings.
+4. `@global` - the current global object for this environment e.g. `window` in a browser or `global` in node. This reference can be used with two-way binding, but note that if something outside of Ractive changes a value, Ractive won't know unless you tell it to `update`.
+5. `@ractive` - the current Ractive instance e.g. the current component or the Ractive root. You can access any properties or methods available on a Ractive instance with this, and due to the way capture works, you can also use `@ractive.get('...')` in a binding and it will update with the target keypath.
+
+## Summary of prefixes
+
+* `~/` means at the current instance root.
+* `.` means the current context. When more path follows, it follows the path from the current context.
+* `../` means the parent of the current context and may also be stacked and have a following path.
+* `@` means this is a special reference that has meaning specified by where it exists in the template e.g. `@index` means the current iteration index of the containing repeated section.
