--- a/docs/edge/ractive.link().md.hbs
+++ b/docs/edge/ractive.link().md.hbs
@@ -2,7 +2,7 @@
 title: ractive.link()
 ---
 
-Creates a link between to {{{createLink 'keypath' 'keypaths'}}} that keeps them in sync. Since Ractive can't always watch the contents of objects, copying an object to two different keypaths in your data usually leads to one or both of them getting out of sync. `link` creates a sort of symlink between the two paths so that Ractive knows they are actually the same object. This is particularly useful for master/detail scenarios where you have a complex list of data and you want to be able to select an item to edit in a detail form.
+Creates a link between two {{{createLink 'keypath' 'keypaths'}}} that keeps them in sync. Since Ractive can't always watch the contents of objects, copying an object to two different keypaths in your data usually leads to one or both of them getting out of sync. `link` creates a sort of symlink between the two paths so that Ractive knows they are actually the same object. This is particularly useful for master/detail scenarios where you have a complex list of data and you want to be able to select an item to edit in a detail form.
 
 ```js
 ractive.link( 'some.nested.0.list.25.item', 'current' );
