--- a/templates/edge/partials/left-nav.md.hbs
+++ b/templates/edge/partials/left-nav.md.hbs
@@ -119,9 +119,13 @@
 	</ul>
 	<h2>Static methods</h2>
 	<ul>
+		<li>{{{createLink 'Ractive.escapeKey()'}}}</li>
 		<li>{{{createLink 'Ractive.extend()'}}}</li>
 		<li>{{{createLink 'Ractive.getNodeInfo()'}}}</li>
+		<li>{{{createLink 'Ractive.joinKeys()'}}}</li>
 		<li>{{{createLink 'Ractive.parse()'}}}</li>
+		<li>{{{createLink 'Ractive.splitKeypath()'}}}</li>
+		<li>{{{createLink 'Ractive.unescapeKey()'}}}</li>
 	</ul>
 	<h2>Static properties</h2>
 	<ul>
