Updated breaking changes
`{{#with obj}}` to not render if `obj` is falsey

--- a/docs/edge/Migrating.md.hbs
+++ b/docs/edge/Migrating.md.hbs
@@ -12,7 +12,7 @@ These migration notes are cribbed from the [CHANGELOG](https://github.com/ractiv
 
 ### Breaking changes and deprecation
 
-* *Nothing yet*
+* `{{#with obj}}` to not render if `obj` is falsey (https://github.com/ractivejs/ractive/issues/1856)
 
 ## Migrating from 0.6.x
 
