--- a/docs/edge/ractive.pop().md.hbs
+++ b/docs/edge/ractive.pop().md.hbs
@@ -9,4 +9,4 @@ The Ractive equivalent to ```Array.pop``` that removes an element from the end o
 > > #### **keypath** *`String`*
 > > The {{{createLink 'keypaths' 'keypath'}}} of the array to change, e.g. `list` or `order.items`.
 
-If the given keypath does not resolve to an array, an error will be thrown.
+If the given keypath does not exist (is `undefined`), an empty array will be supplied instead. Otherwise, if the given keypath does not resolve to an array, an error will be thrown.
