--- a/docs/edge/ractive.push().md.hbs
+++ b/docs/edge/ractive.push().md.hbs
@@ -12,4 +12,4 @@ The Ractive equivalent to ```Array.push``` that appends one or more elements to 
 > > #### **value**
 > > The value to append to the end of the array. One or more values may be supplied.
 
-If the given keypath does not resolve to an array, an error will be thrown.
+If the given keypath does not exist (is `undefined`), an empty array will be supplied instead. Otherwise, if the given keypath does not resolve to an array, an error will be thrown.
