--- a/docs/edge/ractive.unshift().md.hbs
+++ b/docs/edge/ractive.unshift().md.hbs
@@ -12,4 +12,4 @@ The Ractive equivalent to ```Array.unshift``` that prepends one or more elements
 > > #### **value**
 > > The value to prepend to the beginning of the array. One or more values may be supplied.
 
-If the given keypath does not resolve to an array, an error will be thrown.
+If the given keypath does not exist (is `undefined`), an empty array will be supplied instead. Otherwise, if the given keypath does not resolve to an array, an error will be thrown.
