--- a/templates/edge/partials/left-nav.md.hbs
+++ b/templates/edge/partials/left-nav.md.hbs
@@ -102,6 +102,7 @@
 		<li>{{{createLink 'ractive.teardown()'}}}</li>
 		<li>{{{createLink 'ractive.toggle()'}}}</li>
 		<li>{{{createLink 'ractive.toHTML()'}}}</li>
+		<li>{{{createLink 'ractive.transition()'}}}</li>
 		<li>{{{createLink 'ractive.unlink()'}}}</li>
 		<li>{{{createLink 'ractive.unrender()'}}}</li>
 		<li>{{{createLink 'ractive.unshift()'}}}</li>
