fix escaping issue in changes and add a template section for elements to document various smaller directives that don't have their own sections

--- a/templates/edge/partials/left-nav.md.hbs
+++ b/templates/edge/partials/left-nav.md.hbs
@@ -24,6 +24,7 @@
 	<h2>Templates</h2>
 	<ul>
 		<li>{{{createLink 'Templates'}}}</li>
+		<li>{{{createLink 'Elements'}}}</li>
 		<li>{{{createLink 'Mustaches'}}}</li>
 		<li>{{{createLink 'References'}}}</li>
 		<li>{{{createLink 'Expressions'}}}</li>
