Update Writing decorator plugins.md.hbs
js fiddle with 1 bug, I am fixed it

--- a/docs/0.7/Writing decorator plugins.md.hbs
+++ b/docs/0.7/Writing decorator plugins.md.hbs
@@ -4,7 +4,7 @@ title: Writing decorator plugins
 
 A {{{createLink 'decorators' 'decorator'}}} is a way to add behaviour to a node when it is rendered, or to augment it in some way.
 
-For this example we'll create a tooltip decorator. For the impatient, you can see the [finished result in this JSFiddle](http://jsfiddle.net/tomByrer/9g3pB/11/).
+For this example we'll create a tooltip decorator. For the impatient, you can see the [finished result in this JSFiddle](http://jsfiddle.net/9g3pB/69/).
 
 Firstly, we need to add the `decorator` *directive* to any nodes that the decorator should apply to:
 
