Live example for minimum component declaration

--- a/docs/0.7/Components.md.hbs
+++ b/docs/0.7/Components.md.hbs
@@ -12,6 +12,10 @@ First, you need to **create the component** with {{{createLink 'Ractive.extend()
 * [The \{{yield}} Directive](#yield)
 * [Parents and Containers](#parent)
 
+## Minumum example
+
+<script async src="//jsfiddle.net/ceremcem/akhc6by6/embed/"></script>
+
 ## <a name="init"></a>Initialisation Options
 
 Most of the normal Ractive {{{ createLink 'options' 'initialisation options' }}} also apply to components, particularly the {{{ createLink 'lifecycle events' }}}, a few of which are listed here.
